--- a/Portfolio/assets/css/main.css
+++ b/Portfolio/assets/css/main.css
@@ -2646,15 +2646,6 @@ input, select, textarea {
 			.image.main img {
 				width: 100%;
 			}
-			.langague {
-				display: flex;
-			}
-			.logohtml {
-				width: 100px
-			}
-			.logocss {
-				width: 66px
-			}
 
 		@media screen and (max-width: 736px) {
 
@@ -2685,7 +2676,15 @@ input, select, textarea {
 			-ms-transform: scale(1.05);
 			transform: scale(1.05);
 		}
-
+		.langague {
+			display: flex;
+		}
+		.logohtml{
+			width: 100px;
+		}
+		.logocss{
+			width: 66px;
+		}
 /* Actions */
 
 	ul.actions {
